# code-index

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  THREAD_SAFETY_IMPLEMENTATION.md  pyproject.toml  requirements.txt  ruff.toml  test_pydantic_json.py
.github/: copilot-instructions.md
.github/workflows/: docs.yml  test.yml
code_index/: __init__.py  __main__.py  config.py  indexer.py  models.py
code_index/analyzer/: __init__.py  base_analyzer.py  models.py  simple_analyzer.py
code_index/index/: __init__.py  base.py  code_query.py  persist_json.py  simple_index.py
code_index/index/impl/: cross_ref_index.py  simple_index.py
code_index/index/persist/: __init__.py  persist_json.py  persist_sqlite.py
code_index/language_processor/: __init__.py  base.py  impl_c.py  impl_c_cpp.py  impl_cpp.py  impl_python.py
code_index/mcp_server/: __init__.py  models.py  server.py
code_index/mcp_server/services/: __init__.py  code_index_service.py  graph_analyzer_service.py  llm_traverse_codebase.py  repo_analyse_service.py  source_code_fetch_service.py  todo_list.py
code_index/utils/: __init__.py  custom_json.py  logger.py  test.py
docs/: Makefile
docs/source/: conf.py  core_api.rst  index.rst  index_system.rst  language_processors.rst  mcp.rst  utilities.rst
docs/source/examples/: basic_usage.rst
example/c/: test1.c
example/cpp/: test1.cpp  test1.hpp
example/python/: test1.py
examples/: basic_usage.py  code_index_agent.py
scripts/: analyze_callgraph.py
scripts/explore_tree_sitter/: ast_pretty_printer.py  inspect_c_ast.py  inspect_cpp_ast.py  inspect_python_ast.py
test_data/c/: index.json
test_data/cpp/: index.json
test_data/python/: index.sqlite  test1.py
tests/: conftest.py  test_c_cpp_indexer.py  test_indexer_refactored.py  test_python_indexer.py
tests/integration/: test_c_indexer_crossref.py  test_python_indexer.py
tests/mcp_server/: __init__.py  test_code_index_service.py  test_graph_analyzer_service.py  test_mcp_server.py  test_repo_analyse_service.py  test_repo_analyse_service_traverse_policies.py  test_source_code_fetch_service.py  test_todo_list.py
tests/test_analyzer/: test_bfs_traverse_graph.py  test_simple_analyzer.py
tests/test_index/: test_persist_json.py  test_persist_pydantic.py  test_persist_sqlite.py
tests/test_index/test_cross_ref_index/: test_cross_ref_index.py  test_find_full_definition.py
tests/test_index/test_simple_index/: test_find_full_definition.py  test_simple_index_query.py
tests/test_language_processor/: __init__.py  test_c_cpp_processor.py  test_c_range_capture.py  test_common.py  test_python_processor.py  test_python_range_capture.py
tests/test_utils/: test_custom_json.py
