[project]
name = "code-index"
version = "0.1.0"
description = "一个用于索引源代码中函数定义和引用的命令行工具。"
requires-python = ">=3.12"

dependencies = [
    "loguru>=0.7.3",
    "tree-sitter>=0.25.1",
    "tree-sitter-language-pack==0.9.0",
    "sqlalchemy>=2.0.42",
    "dotenv>=0.9.9",
    "pydantic>=2.11.7",
    "fastmcp>=2.11.2",
    "pydantic>=2.11.7",
]

[project.scripts]
code-index = "code_index.__main__:main"
code-index-mcp-server = "code_index.mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_index"]

[tool.black]
# 设置每行的最大长度，100 或 120 是常见选择
line-length = 100
# 排除你不想被格式化的目录
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
  | test_data
)/
'''

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]
doc = [
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "-v", "--tb=short",
    "--strict-markers",
#    "--cov=code_index",
#    "--cov-report=term-missing",
#    "--cov-report=html",
]
asyncio_mode = "auto"
markers = [
    "asyncio: marks tests as requiring asyncio support",
]
