[project]
name = "code-index"
version = "0.1.0"
description = "一个用于索引源代码中函数定义和引用的命令行工具。"
requires-python = ">=3.12"

dependencies = [
    "loguru>=0.7.3",
    "tree-sitter>=0.25.1",
    "tree-sitter-language-pack==0.9.0",
    "sqlalchemy>=2.0.42",
    "dotenv>=0.9.9",
    "pydantic>=2.11.7",
    "fastmcp>=2.11.2",
    "pydantic>=2.11.7",
]

[project.scripts]
code-index = "code_index.__main__:main"
code-index-mcp-server = "code_index.mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_index"]

[tool.uv]
package = true

[dependency-groups]
demo = [
    "notebook>=7.4.5",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-deepseek>=0.1.4",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.29",
    "langgraph>=0.6.4",
    "python-dotenv>=1.1.1",
]
dev = [
    "ruff>=0.12.8",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]
doc = [
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "-v", "--tb=short",
    "--strict-markers",
#    "--cov=code_index",
#    "--cov-report=term-missing",
#    "--cov-report=html",
]
asyncio_mode = "auto"
markers = [
    "asyncio: marks tests as requiring asyncio support",
]
